--- a/style.css
+++ b/style.css
@@ -1,29 +1,30 @@
 body {
-    margin-top: 20px;
     border: 0;
-    height: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     background: linear-gradient(to top left, rgb(14, 65, 104) 7%, rgb(42, 131, 199) 100%);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 #searchbar {
     background-color: white;
-    padding: 1.5em;
-    border-radius: 5em;
+    padding: 1em;
+    border-radius: 3em;
 }
 
 #container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
     width: 40vw;
 }
 
 #card {
-    margin: 20px 0;
     border-radius: 2em;
-    padding: 2em;
+    padding: 1em;
     background: rgb(14, 65, 104);
     font-size: 40px;
     color: white;
@@ -53,13 +54,13 @@ input {
     opacity: 0.5;
 }
 
-input:hover {
+input:hover, input:focus {
     opacity: 1;
 }
 
 input, input::placeholder {
     font-size: 25px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 i {
@@ -72,6 +73,7 @@ i {
     justify-content: center;
     margin-top: 20px;
     font-size: 20px;
+    opacity: 0.5;
 }
 
 button {
@@ -79,4 +81,9 @@ button {
     border: none;
     color: white;
     font-size: 20px;
+}
+
+button:hover, button:focus {
+    opacity: 1;
+    cursor: pointer;
 }
