--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(to top left, rgb(14, 65, 104) 7%, rgb(42, 131, 199) 100%);
+    background: linear-gradient(to top right, rgb(14, 65, 104) 7%, rgb(47, 134, 201) 100%);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
@@ -24,8 +24,9 @@ body {
 
 #card {
     border-radius: 2em;
+    box-shadow: 10px 20px 50px rgb(14, 65, 104, 0.5);
     padding: 1em;
-    background: rgb(14, 65, 104);
+    background: rgb(14, 65, 104, 0.8);
     font-size: 40px;
     color: white;
 }
@@ -37,13 +38,21 @@ body {
     align-items: center;
 }
 
+#cityname {
+    font-size: 50px;
+}
+
 #currenttemp {
-    font-size: 150px;
+    font-size: 140px;
 }
 
 .highandlow {
     display: flex;
     gap: 20px;
+}
+
+#condition {
+    text-transform: capitalize;
 }
 
 input {
@@ -73,7 +82,6 @@ i {
     justify-content: center;
     margin-top: 20px;
     font-size: 20px;
-    opacity: 0.5;
 }
 
 button {
@@ -81,6 +89,7 @@ button {
     border: none;
     color: white;
     font-size: 20px;
+    opacity: 0.7;
 }
 
 button:hover, button:focus {
