--- a/style.css
+++ b/style.css
@@ -6,28 +6,28 @@ body {
     justify-content: center;
     align-items: center;
     background: linear-gradient(to top right, rgb(14, 65, 104) 7%, rgb(47, 134, 201) 100%);
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #searchbar {
     background-color: white;
-    padding: 1em;
+    padding: 0.7em;
     border-radius: 3em;
 }
 
 #container {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 15px;
     width: 40vw;
 }
 
 #card {
     border-radius: 2em;
     box-shadow: 10px 20px 50px rgb(14, 65, 104, 0.5);
-    padding: 1em;
+    padding: 0.8em;
     background: rgb(14, 65, 104, 0.8);
-    font-size: 40px;
+    font-size: 35px;
     color: white;
 }
 
@@ -43,15 +43,17 @@ body {
 }
 
 #currenttemp {
-    font-size: 140px;
+    font-size: 130px;
 }
 
 .highandlow {
+    font-size: 20px;
     display: flex;
     gap: 20px;
 }
 
 #condition {
+    font-size: 30px;
     text-transform: capitalize;
 }
 
@@ -80,7 +82,7 @@ i {
 .unit {
     display: flex;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 10px;
     font-size: 20px;
 }
 
@@ -88,7 +90,7 @@ button {
     background: transparent;
     border: none;
     color: white;
-    font-size: 20px;
+    font-size: 15px;
     opacity: 0.7;
 }
 
