--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ input {
     background: transparent;
     border: none;
     opacity: 0.5;
+    transition: opacity 200ms ease-in;
 }
 
 input:hover, input:focus {
@@ -92,6 +93,7 @@ button {
     color: white;
     font-size: 15px;
     opacity: 0.7;
+    transition: opacity 200ms ease-in;
 }
 
 button:hover, button:focus {
