--- a/style.css
+++ b/style.css
@@ -1,49 +1,59 @@
 body {
-    border: 0;
-    height: 100vh;
+    margin: 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(to top right, rgb(14, 65, 104) 7%, rgb(47, 134, 201) 100%);
+    height: 100vh;
+    width: 100vw;
+    overflow: auto;
+    background: rgb(14, 65, 104);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-#searchbar {
-    background-color: white;
-    padding: 0.7em;
-    border-radius: 3em;
-}
-
-#container {
+#header {
+    background: white;
+    color:rgb(14, 65, 104);
+    padding: 5px;
     display: flex;
-    flex-direction: column;
-    gap: 15px;
-    width: 40vw;
-}
-
-#card {
-    border-radius: 2em;
-    box-shadow: 10px 20px 50px rgb(14, 65, 104, 0.5);
-    padding: 0.8em;
-    background: rgb(14, 65, 104, 0.8);
-    font-size: 35px;
-    color: white;
-}
-
-#data {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    margin: 0;
+    justify-content: space-evenly;
     align-items: center;
 }
 
+#logo {
+    height: 40px;
+}
+
+#searchbar {
+    background-color: rgb(235, 235, 235);
+    padding: 0.3em;
+    padding-left: 0.7em;
+    border-radius: 0.3em;
+}
+
+#container {
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+}
+
+#today-card {
+    margin-top: 20px;
+    width: 50vw;
+    border-radius: 1em;
+    padding: 0.8em;
+    font-size: 35px;
+    color: white;
+    background-color: rgb(255,255,255, 0.1);
+    background-blend-mode: overlay;
+}
+
+
 #cityname {
-    font-size: 50px;
+    font-size: 60px;
 }
 
 #currenttemp {
-    font-size: 130px;
+    font-size: 80px;
 }
 
 .highandlow {
@@ -71,7 +81,7 @@ input:hover, input:focus {
 }
 
 input, input::placeholder {
-    font-size: 25px;
+    font-size: 18px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
@@ -83,20 +93,24 @@ i {
 .unit {
     display: flex;
     justify-content: center;
-    margin-top: 10px;
     font-size: 20px;
 }
 
 button {
     background: transparent;
+    font-weight: bolder;
     border: none;
-    color: white;
+    color: rgb(16,66,104);
     font-size: 15px;
-    opacity: 0.7;
+    opacity: 0.5;
     transition: opacity 200ms ease-in;
 }
 
 button:hover, button:focus {
     opacity: 1;
     cursor: pointer;
+}
+
+.selected {
+    opacity: 1;
 }
