--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ body {
 
 #searchbar {
     background-color: rgb(235, 235, 235);
-    padding: 0.3em;
     padding-left: 0.7em;
+    padding-right: 1.5em;
     border-radius: 0.3em;
 }
 
@@ -62,6 +62,12 @@ body {
     gap: 20px;
 }
 
+.more-info {
+    font-size: 12px;
+    display: flex;
+    gap: 12px;
+}
+
 #condition {
     font-size: 30px;
     text-transform: capitalize;
@@ -70,6 +76,7 @@ body {
 input {
     vertical-align: middle;
     margin: none;
+    padding: 0.5em;
     background: transparent;
     border: none;
     opacity: 0.5;
@@ -81,7 +88,7 @@ input:hover, input:focus {
 }
 
 input, input::placeholder {
-    font-size: 18px;
+    font-size: 14px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
