--- a/style.css
+++ b/style.css
@@ -30,13 +30,14 @@ body {
     border-radius: 0.3em;
 }
 
-#container {
+#content {
     width: 100vw;
     display: flex;
-    justify-content: center;
+    flex-direction: column;    
+    align-items: center;
 }
 
-#today-card {
+#today-card, #hourly-card {
     margin-top: 20px;
     width: 50vw;
     border-radius: 1em;
@@ -46,7 +47,6 @@ body {
     background-color: rgb(255,255,255, 0.1);
     background-blend-mode: overlay;
 }
-
 
 #cityname {
     font-size: 60px;
@@ -63,9 +63,9 @@ body {
 }
 
 .more-info {
-    font-size: 12px;
+    font-size: 14px;
     display: flex;
-    gap: 12px;
+    gap: 14px;
 }
 
 #condition {
@@ -120,4 +120,21 @@ button:hover, button:focus {
 
 .selected {
     opacity: 1;
+}
+
+#hourly-card {
+    display: flex;
+    overflow: scroll;
+}
+
+.hour-cell {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50px;
+    font-size: 14px;
+}
+
+.icon {
+    width: 30px
 }
