--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ button {
     background: transparent;
     font-weight: bolder;
     border: none;
-    color: rgb(16,66,104);
+    color: rgb(14, 65, 104);
     font-size: 15px;
     opacity: 0.5;
     transition: opacity 200ms ease-in;
@@ -181,4 +181,23 @@ button:hover, button:focus {
 
 .details {
     width: 10em;
+}
+
+#footer, .github {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: rgb(235,235,235);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0.2em;
+    color: rgb(14, 65, 104);
+    font-size: 12px;
+}
+
+.ghlogo {
+    width: 15px;
+}
+
+.github {
+    gap: 5px;
 }
