--- a/style.css
+++ b/style.css
@@ -24,9 +24,8 @@ body {
 }
 
 #searchbar {
-    background-color: rgb(235, 235, 235);
+    background-color: white;
     padding-left: 0.7em;
-    padding-right: 1.5em;
     border-radius: 0.3em;
 }
 
@@ -57,6 +56,7 @@ body {
     margin-bottom: 20px;
     padding-top: 0.3em;
     padding-bottom: 0.3em;
+    overflow: scroll;
 }
 
 #cityname {
@@ -85,6 +85,7 @@ body {
 }
 
 input {
+    width: 200px;
     vertical-align: middle;
     margin: none;
     padding: 0.5em;
@@ -187,7 +188,7 @@ button:hover, button:focus {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: rgb(235,235,235);
+    background-color: white;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 0.2em;
     color: rgb(14, 65, 104);
